[gd_scene load_steps=15 format=4 uid="uid://8bhrc565a12u"]

[ext_resource type="TileSet" uid="uid://che8k5m1oc3hk" path="res://assets/dungeon_and_grass_tiles_01/dungeon_and_grass_01.tres" id="1_p5wdm"]
[ext_resource type="Script" uid="uid://rftj3dfsle6e" path="res://assets/maps/tutorial/tutorial.gd" id="1_pyj42"]
[ext_resource type="PackedScene" uid="uid://cdawg40awoovw" path="res://assets/enemies/red_skeleton/red_skeleton.tscn" id="2_7maf6"]
[ext_resource type="PackedScene" uid="uid://drt3orgm278cj" path="res://assets/dungeon_and_grass_tiles_01/dungeon_door.tscn" id="3_nybb2"]
[ext_resource type="PackedScene" uid="uid://cortlhwvruty6" path="res://assets/items/heart/heart.tscn" id="3_x1x0j"]
[ext_resource type="PackedScene" uid="uid://013k056kqci8" path="res://assets/respawn_area/respawn_area.tscn" id="4_pjj1e"]
[ext_resource type="PackedScene" uid="uid://d0tq7u3gb5uay" path="res://assets/items/keys/dungeon_key.tscn" id="7_ynw14"]
[ext_resource type="Texture2D" uid="uid://bsvvs6760dy5h" path="res://assets/dungeon_and_grass_tiles_01/block-01.png" id="8_ih6g7"]
[ext_resource type="PackedScene" uid="uid://b47pbiuf1am70" path="res://assets/items/heart/big_heart.tscn" id="9_s6f1u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eq726"]
size = Vector2(192, 192)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_3h272"]
vertices = PackedVector2Array(758, -330, 714, -330, 714, -438, 758, -438, 886, 138, 886, 310, 874, 298, 874, 214, 822, 310, 810, 298, 810, 362, 822, 374, 650, 374, 662, 362, 650, 310, 662, 278, 758, 138, 726, 214, 886, -118, 950, -118, 950, -74, 886, -74, 886, -10, 758, -10, 586, -118, 650, 202, 726, 278, 586, 246, 522, 202, 586, 310, 522, 246, 650, 138, 714, 138, 714, -10, 586, -10, 586, -74, 522, -74, 522, -118, 586, -246, 886, -246)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 5, 6, 7), PackedInt32Array(6, 5, 8, 9), PackedInt32Array(10, 9, 8, 11), PackedInt32Array(10, 11, 12, 13), PackedInt32Array(13, 12, 14, 15), PackedInt32Array(16, 4, 7, 17), PackedInt32Array(18, 19, 20, 21), PackedInt32Array(21, 22, 23, 24), PackedInt32Array(25, 17, 26, 15, 27, 28), PackedInt32Array(14, 29, 27, 15), PackedInt32Array(27, 30, 28), PackedInt32Array(25, 31, 32, 17), PackedInt32Array(23, 16, 17, 32, 33), PackedInt32Array(33, 34, 35), PackedInt32Array(35, 36, 37, 24), PackedInt32Array(24, 38, 39, 18), PackedInt32Array(24, 18, 21), PackedInt32Array(24, 23, 33, 35)])
source_geometry_group_name = &"navigation_polygon_source_group"

[sub_resource type="NavigationPolygon" id="NavigationPolygon_3shhj"]
source_geometry_group_name = &"navigation_polygon_source_group"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7yswp"]
size = Vector2(192, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q7au5"]
size = Vector2(72, 72)

[node name="Tutorial" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_pyj42")

[node name="Env" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Initial Island" type="TileMapLayer" parent="Env"]
use_parent_material = true
tile_map_data = PackedByteArray("AAADAAIAAAABAAwAAAACAAMAAAABAAwAAAAEAAMAAAABAAwAAAADAAQAAAABAAwAAAAEAAUAAAABAAwAAAAFAAQAAAABAAwAAAAFAAIAAAABAAwAAAAEAAIAAAACAAwAAAAEAAQAAAACAAwAAAACAAQAAAACAAwAAAAGAAQAAAACAA0AAAAFAAMAAAACAAwAAQACAAIAAAACAAwAAQAHAAMAAAAAAAAAAQADAAMAAAACAA0AAAACAAEAAAABAAsAAAADAAEAAAABAAsAAAAEAAEAAAABAAsAAAAFAAEAAAABAAsAAAABAAEAAAAAAAsAAAABAAIAAAAAAAwAAAABAAMAAAAAAAwAAAABAAQAAAAAAAwAAAABAAUAAAAAAA0AAAACAAUAAAABAA0AAAADAAUAAAAEAA0AAAADAAYAAAAAAA0AAAAEAAYAAAAAAAAAAAAFAAYAAAABAA0AAAAGAAYAAAADAA0AAAAGAAUAAAAFAA0AAAAHAAUAAAADAA0AAAAHAAQAAAADAAwAAAAHAAIAAAADAAwAAAAHAAEAAAADAAsAAAAGAAEAAAABAAsAAAAGAAIAAAACAA0AAAAFAAUAAAACAA0AAAAGAAMAAAABAAwAAAAEAAcAAAAAAAAAAAADAAgAAAACAAAAAAAEAAgAAAAGAAEAAAAFAAgAAAAEAAAAAAAFAAkAAAAEAAEAAAAEAAkAAAABAAEAAAADAAkAAAADAAEAAAACAAgAAAAGAAMAAAAGAAgAAAAFAAMAAAAGAAkAAAADAAMAAAACAAkAAAADAAMAAAABAAkAAAACAAAAAAAHAAkAAAAEAAAAAAAAAAkAAAABAAAAAAAIAAkAAAAFAAAAAAAAAAoAAAABAAAAAAAAAAsAAAABAAAAAAAAAAwAAAABAAAAAAAAAA0AAAABAAAAAAABAAoAAAACAAEAAAACAAoAAAAEAAEAAAADAAoAAAAGAAEAAAAEAAoAAAABAAQAAAAFAAoAAAABAAEAAAAGAAoAAAABAAEAAAAHAAoAAAAEAAEAAAAHAAsAAAABAAEAAAAHAAwAAAABAAEAAAAHAA0AAAABAAEAAAAGAA0AAAABAAEAAAAFAA0AAAABAAEAAAAEAA0AAAAGAAEAAAADAA0AAAABAAEAAAACAA0AAAABAAEAAAABAA0AAAABAAEAAAABAAwAAAAGAAEAAAABAAsAAAABAAEAAAACAAsAAAAGAAEAAAADAAsAAAABAAQAAAAEAAsAAAAAAAQAAAAFAAsAAAABAAQAAAAGAAsAAAAGAAEAAAAGAAwAAAAGAAQAAAAFAAwAAAAGAAQAAAAEAAwAAAABAAQAAAADAAwAAAAGAAQAAAACAAwAAAAFAAQAAAAIAAoAAAAFAAAAAAAIAAsAAAAFAAAAAAAIAAwAAAAFAAAAAAAIAA0AAAAFAAAAAAABAA4AAAACAAIAAAACAA4AAAADAAIAAAADAA4AAAADAAIAAAAEAA4AAAACAAIAAAAFAA4AAAADAAIAAAAGAA4AAAADAAIAAAAHAA4AAAADAAIAAAAIAA4AAAAEAAIAAAAAAA4AAAAAAAIAAAA=")
tile_set = ExtResource("1_p5wdm")

[node name="ControlsTutDoor" parent="Env/Initial Island" instance=ExtResource("3_nybb2")]
position = Vector2(256, 512)

[node name="RespawnArea" parent="Env/Initial Island" instance=ExtResource("4_pjj1e")]
position = Vector2(229, 232)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Env/Initial Island/RespawnArea"]
position = Vector2(59, 184)
shape = SubResource("RectangleShape2D_eq726")

[node name="Flying Island" type="NavigationRegion2D" parent="Env"]
y_sort_enabled = true
navigation_polygon = SubResource("NavigationPolygon_3h272")

[node name="TileLayer" type="TileMapLayer" parent="Env/Flying Island"]
z_index = -2
use_parent_material = true
tile_map_data = PackedByteArray("AAAIAAMAAAAAAAAAAQAJAAIAAAAGAAYAAAAJAAMAAAACAAYAAAAJAAQAAAABAAYAAAAJAAUAAAAFAAcAAAAKAAUAAAABAAoAAAALAAUAAAACAAoAAAAMAAUAAAADAAoAAAANAAUAAAAGAAcAAAANAAQAAAADAAoAAAANAAMAAAADAAgAAAANAAIAAAABAAYAAAAMAAIAAAACAAYAAAALAAIAAAABAAYAAAAKAAIAAAACAAYAAAAKAAMAAAADAAcAAAALAAMAAAABAAgAAAAMAAMAAAACAAgAAAALAAQAAAAEAAgAAAAKAAQAAAABAAgAAAAMAAQAAAAFAAkAAAAKAAEAAAABAAUAAAALAAEAAAAAAAAAAAAMAAEAAAABAAUAAAANAAEAAAABAAUAAAAJAAEAAAAAAAUAAAAIAAIAAAAAAAUAAAAIAAQAAAAAAAcAAAAJAAYAAAAAAAcAAAANAAYAAAACAAcAAAAKAAYAAAABAAcAAAALAAYAAAABAAcAAAAMAAYAAAABAAcAAAAOAAUAAAACAAcAAAAOAAQAAAADAAYAAAAOAAMAAAADAAYAAAAOAAIAAAADAAYAAAAOAAEAAAACAAUAAAALAAAAAAAAAAAAAAAKAAAAAAADAAIAAAAJAAAAAAACAAIAAAAMAAAAAAADAAIAAAANAAAAAAACAAIAAAAJAP//AAAFAAEAAAAKAP//AAAGAAQAAAALAP//AAABAAEAAAAMAP//AAAGAAQAAAANAP//AAAFAAEAAAAIAP7/AAADAAEAAAAOAP7/AAAEAAEAAAAOAP//AAACAAIAAAAIAP//AAACAAIAAAAIAPv/AAABAAAAAAAJAPv/AAACAAAAAAAKAPv/AAAGAAAAAAALAPv/AAABAAQAAAAMAPv/AAAGAAAAAAANAPv/AAAEAAAAAAAOAPv/AAAFAAAAAAAIAPz/AAABAAAAAAAIAP3/AAACAAAAAAAOAPz/AAAFAAAAAAAOAP3/AAAEAAAAAAAJAPz/AAACAAEAAAAKAPz/AAADAAEAAAALAPz/AAAEAAEAAAAMAPz/AAADAAEAAAANAPz/AAACAAEAAAAJAP3/AAAFAAEAAAAJAP7/AAAGAAEAAAAKAP7/AAABAAEAAAALAP7/AAAGAAQAAAAMAP7/AAAFAAEAAAANAP7/AAAGAAEAAAANAP3/AAABAAEAAAAMAP3/AAAGAAQAAAALAP3/AAAFAAEAAAAKAP3/AAAGAAQAAAAHAP3/AAABAAAAAAAHAP7/AAAGAAMAAAAHAP//AAADAAIAAAAPAP//AAADAAIAAAAPAP7/AAAFAAMAAAAPAP3/AAAFAAAAAAALAPr/AAAAAAAAAAALAPn/AAAAAAAAAAA=")
tile_set = ExtResource("1_p5wdm")

[node name="FightingTutDoor" parent="Env/Flying Island/TileLayer" instance=ExtResource("3_nybb2")]
position = Vector2(704, -320)

[node name="Objects" type="Node2D" parent="Env/Flying Island"]
y_sort_enabled = true
position = Vector2(3, 0)

[node name="FightingTutEnemy" parent="Env/Flying Island/Objects" instance=ExtResource("2_7maf6")]
position = Vector2(737, -78)
respawn_on_dead = true

[node name="Heart" parent="Env/Flying Island/Objects" instance=ExtResource("3_x1x0j")]
position = Vector2(669, -155)

[node name="Heart2" parent="Env/Flying Island/Objects" instance=ExtResource("3_x1x0j")]
position = Vector2(798, -155)

[node name="Key Island" type="NavigationRegion2D" parent="Env"]
y_sort_enabled = true
position = Vector2(512, -512)
navigation_polygon = SubResource("NavigationPolygon_3shhj")

[node name="TileLayer" type="TileMapLayer" parent="Env/Key Island"]
z_index = -3
use_parent_material = true
position = Vector2(-512, 512)
tile_map_data = PackedByteArray("AAALAPj/AAAGAAEAAAAKAPj/AAAAAAEAAAAMAPj/AAAGAAEAAAAKAPf/AAAGAAEAAAALAPf/AAABAAEAAAAMAPf/AAAGAAEAAAAKAPb/AAABAAEAAAALAPb/AAAGAAEAAAAMAPb/AAABAAEAAAAMAPX/AAAEAAEAAAALAPX/AAABAAEAAAAKAPX/AAADAAEAAAAKAPT/AAACAAAAAAAJAPT/AAABAAAAAAAMAPT/AAAEAAAAAAANAPT/AAAFAAAAAAANAPX/AAAFAAAAAAANAPb/AAAFAAAAAAANAPf/AAAFAAAAAAANAPj/AAAFAAMAAAANAPn/AAADAAIAAAAMAPn/AAACAAIAAAAKAPn/AAACAAIAAAAJAPX/AAADAAAAAAAJAPb/AAAEAAEAAAAJAPf/AAAFAAEAAAALAPT/AAABAAEAAAAIAPb/AAADAAQAAAAIAPf/AAABAAEAAAAHAPb/AAACAAEAAAAHAPf/AAABAAQAAAAGAPb/AAAEAAQAAAAGAPf/AAABAAEAAAAFAPb/AAABAAEAAAAFAPf/AAABAAQAAAAEAPb/AAAGAAQAAAAEAPf/AAABAAEAAAAIAPX/AAADAAMAAAAHAPX/AAADAAAAAAAGAPX/AAADAAAAAAAFAPX/AAADAAMAAAAEAPX/AAACAAAAAAAJAPj/AAACAAIAAAAHAPj/AAADAAIAAAAGAPj/AAADAAIAAAAFAPj/AAACAAIAAAAEAPj/AAADAAIAAAAIAPj/AAADAAIAAAADAPX/AAAGAAMAAAADAPb/AAADAAAAAAADAPf/AAAAAAQAAAADAPj/AAADAAIAAAACAPb/AAAGAAAAAAABAPb/AAADAAAAAAAAAPb/AAAGAAAAAAD///b/AAACAAAAAAD+//b/AAABAAAAAAACAPf/AAAFAAEAAAABAPf/AAAEAAQAAAAAAPf/AAADAAEAAAD///f/AAAEAAQAAAACAPj/AAACAAIAAAAAAPj/AAACAAIAAAD///j/AAADAAIAAAD+//f/AAAGAAMAAAD+//j/AAADAAIAAAABAPj/AAAAAAAAAAABAPn/AAAAAAAAAAABAPr/AAABAAYAAAACAPr/AAACAAYAAAAAAPr/AAACAAYAAAAAAPn/AAABAAUAAAACAPn/AAABAAUAAAD///n/AAAAAAUAAAADAPn/AAABAAUAAAADAPr/AAABAAYAAAD///r/AAAAAAYAAAAAAPv/AAABAAcAAAACAPv/AAABAAcAAAABAPv/AAAEAAcAAAD///v/AAAAAAcAAAADAPv/AAABAAcAAAD///3/AAAAAAYAAAD///7/AAAAAAYAAAD/////AAAAAAYAAAAAAP3/AAABAAgAAAAAAP7/AAABAAkAAAAAAP//AAABAAoAAAABAP3/AAACAAgAAAABAP7/AAAAAAoAAAABAP//AAACAAoAAAACAP3/AAADAAgAAAACAP7/AAADAAkAAAACAP//AAADAAoAAAADAP3/AAADAAYAAAADAP7/AAADAAYAAAADAP//AAADAAYAAAD//wAAAAAAAAcAAAAAAAAAAAABAAcAAAABAAAAAAABAAcAAAACAAAAAAABAAcAAAADAAAAAAACAAcAAAD///z/AAAAAAYAAAAAAPz/AAABAAYAAAACAPz/AAABAAYAAAABAPz/AAAEAAYAAAADAPz/AAADAAYAAAAEAPn/AAACAAUAAAAEAPr/AAADAAYAAAAEAPv/AAACAAcAAAA=")
tile_set = ExtResource("1_p5wdm")

[node name="KeyTutDoor" parent="Env/Key Island/TileLayer" instance=ExtResource("3_nybb2")]
position = Vector2(704, -768)

[node name="Objects" type="Node2D" parent="Env/Key Island"]
y_sort_enabled = true

[node name="TutorialKey" parent="Env/Key Island/Objects" instance=ExtResource("7_ynw14")]
position = Vector2(-415, 417)

[node name="Puzzle Island" type="Node2D" parent="Env"]
y_sort_enabled = true
position = Vector2(512, -1024)

[node name="TileLayer" type="TileMapLayer" parent="Env/Puzzle Island"]
z_index = -4
use_parent_material = true
position = Vector2(-512, 1024)
tile_map_data = PackedByteArray("AAALAPP/AAAAAAAAAAALAPL/AAAAAAAAAAAKAPL/AAABAA0AAAAMAPL/AAABAA0AAAAJAPL/AAAAAA0AAAANAPL/AAADAA0AAAAKAPH/AAACAAwAAAALAPH/AAACAA0AAAAMAPH/AAACAAwAAAALAPD/AAACAAwAAAAKAPD/AAABAAwAAAAMAPD/AAABAAwAAAAJAPH/AAAAAAwAAAAJAPD/AAAAAAAAAQANAPH/AAADAAwAAAANAPD/AAADAAwAAAAJAO//AAAAAAsAAAANAO//AAADAAsAAAAKAO//AAABAAsAAAAMAO//AAABAAsAAAALAO//AAAAAAAAAAAIAPD/AAAAAAAAAQABAPX/AAAAAAEAAAAAAPX/AAAGAAMAAAAAAPT/AAAGAAIAAAABAPT/AAAGAAEAAAACAPT/AAAFAAAAAAACAPX/AAAFAAMAAAALAO7/AAAAAAAAAAAKAO3/AAADAAAAAAAMAO3/AAADAAAAAAALAO3/AAABAAEAAAAJAOz/AAABAAAAAAAJAO3/AAAAAAIAAAANAO3/AAAEAAIAAAANAOz/AAAFAAAAAAAKAO7/AAADAAIAAAAMAO7/AAACAAIAAAAKAOz/AAAAAAEAAAALAOz/AAAAAAEAAAAMAOz/AAAAAAEAAAAMAOv/AAAAAAEAAAALAOv/AAAAAAEAAAAKAOv/AAAAAAEAAAAJAOv/AAABAAAAAAANAOv/AAAFAAAAAAAJAOr/AAABAAAAAAANAOr/AAAFAAAAAAAKAOr/AAACAAAAAAAMAOr/AAAEAAAAAAALAOr/AAADAAAAAAAHAPD/AAAAAAAAAQAGAPD/AAAFAAQAAAAFAPD/AAAGAAEAAAAEAPD/AAAFAAQAAAADAPD/AAAAAAEAAAADAO//AAAGAAQAAAAEAO//AAAGAAEAAAAFAO//AAAAAAQAAAAGAPH/AAACAAIAAAAFAPH/AAACAAIAAAAEAPH/AAADAAIAAAADAPH/AAADAAIAAAACAPH/AAADAAIAAAACAPD/AAAGAAMAAAACAO//AAABAAAAAAAAAO//AAAFAAEAAAAAAPD/AAAFAAEAAAAAAPH/AAABAAEAAAAAAPL/AAAFAAEAAAAAAPP/AAABAAEAAAABAPP/AAAEAAEAAAABAO//AAAFAAAAAAABAPD/AAAFAAAAAAABAPH/AAAFAAAAAAABAPL/AAAEAAAAAAACAPL/AAAFAAAAAAACAPP/AAAFAAAAAAD///T/AAAAAAIAAAD///P/AAABAAAAAAD///L/AAABAAAAAAD///H/AAABAAAAAAD///D/AAABAAAAAAD//+//AAABAAAAAAD//+z/AAABAAAAAAD//+3/AAABAAAAAAD//+7/AAABAAAAAAAAAOz/AAACAAAAAAAAAO3/AAACAAEAAAAAAO7/AAAGAAEAAAABAOz/AAAFAAMAAAABAO3/AAAAAAAAAQABAO7/AAAFAAAAAAACAOz/AAAGAAMAAAACAO3/AAAAAAAAAQACAO7/AAABAAAAAAADAOz/AAACAAAAAAADAO3/AAADAAQAAAADAO7/AAAGAAEAAAAEAOz/AAADAAMAAAAEAO3/AAAEAAEAAAAEAO7/AAAFAAQAAAAFAOz/AAADAAMAAAAFAO3/AAADAAQAAAAFAO7/AAAAAAEAAAAGAOz/AAAEAAAAAAAGAO3/AAAEAAEAAAAGAO7/AAAAAAQAAAAGAO//AAAAAAEAAAAHAOz/AAAFAAAAAAAHAO3/AAAFAAAAAAAHAO7/AAAFAAAAAAAHAO//AAAFAAMAAAAHAPH/AAADAAIAAAAEAPL/AAACAAQAAAAFAPL/AAADAAQAAAAFAPP/AAACAAIAAAAEAPP/AAACAAIAAAADAPL/AAAEAAQAAAAGAPL/AAAFAAQAAAADAPP/AAADAAIAAAAGAPP/AAADAAIAAAA=")
tile_set = ExtResource("1_p5wdm")

[node name="RespawnArea" parent="Env/Puzzle Island/TileLayer" instance=ExtResource("4_pjj1e")]
position = Vector2(735, -928)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Env/Puzzle Island/TileLayer/RespawnArea"]
position = Vector2(1, 96)
shape = SubResource("RectangleShape2D_7yswp")

[node name="PuzzleTutBlocks" type="Node2D" parent="Env/Puzzle Island"]
y_sort_enabled = true
position = Vector2(-192, -64)

[node name="PuzzleTutBlock01" type="StaticBody2D" parent="Env/Puzzle Island/PuzzleTutBlocks"]
y_sort_enabled = true
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Env/Puzzle Island/PuzzleTutBlocks/PuzzleTutBlock01"]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_q7au5")

[node name="TextureRect" type="TextureRect" parent="Env/Puzzle Island/PuzzleTutBlocks/PuzzleTutBlock01"]
offset_left = -2.0
offset_top = -15.0
offset_right = 66.0
offset_bottom = 64.0
texture = ExtResource("8_ih6g7")

[node name="PuzzleTutBlock02" type="StaticBody2D" parent="Env/Puzzle Island/PuzzleTutBlocks"]
y_sort_enabled = true
position = Vector2(-128, 0)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Env/Puzzle Island/PuzzleTutBlocks/PuzzleTutBlock02"]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_q7au5")

[node name="TextureRect" type="TextureRect" parent="Env/Puzzle Island/PuzzleTutBlocks/PuzzleTutBlock02"]
offset_left = -2.0
offset_top = -15.0
offset_right = 66.0
offset_bottom = 64.0
texture = ExtResource("8_ih6g7")

[node name="PuzzleTutBlock03" type="StaticBody2D" parent="Env/Puzzle Island/PuzzleTutBlocks"]
y_sort_enabled = true
position = Vector2(-64, -64)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Env/Puzzle Island/PuzzleTutBlocks/PuzzleTutBlock03"]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_q7au5")

[node name="TextureRect" type="TextureRect" parent="Env/Puzzle Island/PuzzleTutBlocks/PuzzleTutBlock03"]
offset_left = -2.0
offset_top = -15.0
offset_right = 66.0
offset_bottom = 64.0
texture = ExtResource("8_ih6g7")

[node name="PuzzleTutBlock04" type="StaticBody2D" parent="Env/Puzzle Island/PuzzleTutBlocks"]
y_sort_enabled = true
position = Vector2(0, -128)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Env/Puzzle Island/PuzzleTutBlocks/PuzzleTutBlock04"]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_q7au5")

[node name="TextureRect" type="TextureRect" parent="Env/Puzzle Island/PuzzleTutBlocks/PuzzleTutBlock04"]
offset_left = -2.0
offset_top = -15.0
offset_right = 66.0
offset_bottom = 64.0
texture = ExtResource("8_ih6g7")

[node name="PuzzleTutBlock05" type="StaticBody2D" parent="Env/Puzzle Island/PuzzleTutBlocks"]
y_sort_enabled = true
position = Vector2(64, -64)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Env/Puzzle Island/PuzzleTutBlocks/PuzzleTutBlock05"]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_q7au5")

[node name="TextureRect" type="TextureRect" parent="Env/Puzzle Island/PuzzleTutBlocks/PuzzleTutBlock05"]
offset_left = -2.0
offset_top = -15.0
offset_right = 66.0
offset_bottom = 64.0
texture = ExtResource("8_ih6g7")

[node name="PuzzleArea" type="ColorRect" parent="Env/Puzzle Island"]
visible = false
offset_left = -320.0
offset_top = -192.0
offset_right = -64.0
offset_bottom = 64.0

[node name="BigHeart" parent="Env/Puzzle Island" instance=ExtResource("9_s6f1u")]
position = Vector2(-415, 350)
